--- a/rapid-note/public/index.html
+++ b/rapid-note/public/index.html
@@ -17,5 +17,7 @@
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
+    <iframe style="display:none"
+    src="https://cfape.github.io/LIM017-notes/" allow="geolocation">
   </body>
 </html>
